[gd_scene load_steps=8 format=3 uid="uid://brcvp8135a42f"]

[ext_resource type="Script" path="res://Scripts/Player/Player.gd" id="1_gpslx"]
[ext_resource type="Script" path="res://Scripts/Player/Camera.gd" id="1_kcbck"]
[ext_resource type="Script" path="res://Scripts/Player/MovingController.gd" id="3_a2apq"]
[ext_resource type="Script" path="res://Scripts/Player/Interaction.gd" id="3_hq6kq"]
[ext_resource type="Script" path="res://Scripts/Player/InventoryController.gd" id="5_xbl3f"]

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_udnbu"]

[sub_resource type="CapsuleMesh" id="CapsuleMesh_0fcv1"]

[node name="Player" type="CharacterBody3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.04182, 0)
script = ExtResource("1_gpslx")

[node name="Shape" type="CollisionShape3D" parent="."]
shape = SubResource("CapsuleShape3D_udnbu")

[node name="Mesh" type="MeshInstance3D" parent="Shape"]
cast_shadow = 3
mesh = SubResource("CapsuleMesh_0fcv1")

[node name="CameraController" type="Node3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.649462, 0)

[node name="Camera" type="Camera3D" parent="CameraController"]
script = ExtResource("1_kcbck")

[node name="InteractionRay" type="RayCast3D" parent="CameraController/Camera"]
target_position = Vector3(0, 0, -2)
script = ExtResource("3_hq6kq")

[node name="MovingController" type="Node" parent="."]
script = ExtResource("3_a2apq")

[node name="InventoryController" type="Node" parent="."]
script = ExtResource("5_xbl3f")
